# tauri-plugin-askit

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: add_agent_flow.toml  add_agent_flow_edge.toml  add_agent_flow_node.toml  copy_sub_flow.toml  get_agent_default_config.toml  get_agent_default_configs.toml  get_agent_definition.toml  get_agent_definitions.toml  get_agent_defs.toml  get_agent_flows.toml  get_global_config.toml  get_global_configs.toml  get_global_configs_map.toml  insert_agent_flow.toml  new_agent_flow.toml  new_agent_flow_node.toml  remove_agent_flow.toml  remove_agent_flow_edge.toml  remove_agent_flow_node.toml  rename_agent_flow.toml  set_agent_config.toml  set_agent_configs.toml  set_global_config.toml  set_global_configs.toml  set_global_configs_map.toml  start_agent.toml  start_agent_flow.toml  stop_agent.toml  stop_agent_flow.toml  unique_flow_name.toml  write_board.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  observer.rs
