[package]
name = "tauri-plugin-askit"
version = "0.2.0"
authors = ["Akira Ishino <akira@lumilab.jp>"]
license = "Apache-2.0 OR MIT"
description = "Tauri plugin for Agent Stream Kit"
edition = "2021"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-askit"

[dependencies]
tauri = { version = "2.8.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
agent-stream-kit = "0.7.1"

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }

#[patch.crates-io]
#agent-stream-kit = { path = "../agent-stream-kit/agent-stream-kit" }
